--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -102,8 +102,27 @@ footer{
     background-color: #FFFFFF;
 }
 
-.content-tabuada td{
-    padding: 10px;
+.content-tabuada table{
+    width: 100%;
+    border-collapse: collapse;
 }
+
+.content-tabuada td{
+    padding: .75rem;
+    border-top: 1px solid #DEE2E6;
+}
+
+.content-tabuada tbody tr:nth-child(odd) {
+    background-color: rgb(0,0,0,.05);
+}
+
+.content-tabuada tbody tr:hover {
+    background-color: rgba(0,0,0,.15);
+    cursor: pointer;
+}
+
+
+
+
 
 
