--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -113,12 +113,17 @@ footer{
 }
 
 .content-tabuada tbody tr:nth-child(odd) {
-    background-color: rgb(0,0,0,.05);
+    background-color: rgba(36, 54, 88, 0.20);
 }
 
 .content-tabuada tbody tr:hover {
-    background-color: rgba(0,0,0,.15);
+    background-color: rgba(68, 16, 16, 0.15);
     cursor: pointer;
+}
+
+#valorA{
+    width: 100%;
+    padding: 10px;
 }
 
 
